--- a/PI/style.css
+++ b/PI/style.css
@@ -1,4 +1,7 @@
-
+html{
+    width: 100vw;
+    height: 100vh;
+}
 
 header{
     padding-bottom: 40px;
@@ -25,6 +28,3 @@ th{
     border: 1px solid black;
 }
 
-.operator{
-    margin: auto;
-}
